--- a/webplatform_test/WebContent/WEB-INF/web.xml
+++ b/webplatform_test/WebContent/WEB-INF/web.xml
@@ -15,11 +15,16 @@
   
   <context-param>
     <param-name>imagestore_root_path</param-name>
-    <param-value>D:/ProjectSource/java_workspace/sencha_test/imgstore_root</param-value>
+    <param-value>C:\Users\Administrator\Desktop\OpenCV_스터디\git\opencv_study\webplatform_test\imgstore_root</param-value>
   </context-param>
   
   <context-param>
   	<param-name>process</param-name>
-  	<param-value>C:/Users/Administrator/Desktop/OpenCV_스터디/project/opencv_proc/Debug/opencv_proc.exe</param-value>
+  	<param-value>C:\Users\Administrator\Desktop\OpenCV_스터디\git\opencv_study\opencv_proc\Debug\opencv_proc.exe</param-value>
   </context-param>
+  <context-param>
+  	<param-name>process_run_path</param-name>
+  	<param-value>C:\Users\Administrator\Desktop\OpenCV_스터디\git\opencv_study\opencv_proc\</param-value>
+  </context-param>
+  
 </web-app>
